services/langfuse/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: langfuse-web
  namespace: langfuse
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: gateway-internal
      namespace: gateway
      sectionName: http
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: gateway-internal
      namespace: gateway
      sectionName: https
  hostnames:
    - "langfuse.mattshan.dev"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: ""
          kind: Service
          name: langfuse-web
          port: 3000
          weight: 1
